--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Short stories'
 - !lcc 'PH'
 - !lcsh 'Fiction'
+- GITenberg
 tableOfContents: Syksyn tullen -- »Kyllähän valtesmanni mun tuntoo» -- »Sepä hauskaa…
   Kah!» -- Reipas emäntä -- Hollijuttu -- Herastuomarin kertomus -- Manu-papista --
   Tapaninpäivä Mäkelässä 1870-luvulla -- Rasmus Reilu -- Työnorjat -- Kerran yökulussa
